--- a/client-replica/package.json
+++ b/client-replica/package.json
@@ -8,9 +8,12 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "register-service-worker": "^1.6.2",
+    "rxjs": "^6.5.3",
     "vue": "^2.6.10",
     "vue-class-component": "^7.0.2",
+    "vue-material": "^1.0.0-beta-11",
     "vue-property-decorator": "^8.1.0",
     "vue-router": "^3.0.3"
   },
