--- a/client-replica/package.json
+++ b/client-replica/package.json
@@ -15,18 +15,19 @@
     "vue-class-component": "^7.0.2",
     "vue-material": "^1.0.0-beta-11",
     "vue-property-decorator": "^8.1.0",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-video-player": "^5.0.2"
   },
   "devDependencies": {
-    "@types/jest": "^23.1.4",
-    "@vue/cli-plugin-pwa": "^3.11.0",
-    "@vue/cli-plugin-typescript": "^3.11.0",
-    "@vue/cli-plugin-unit-jest": "^3.11.0",
-    "@vue/cli-service": "^3.11.0",
+    "@types/jest": "^24.0.23",
+    "@vue/cli-plugin-pwa": "^4.0.5",
+    "@vue/cli-plugin-typescript": "^4.0.5",
+    "@vue/cli-plugin-unit-jest": "^4.0.5",
+    "@vue/cli-service": "^4.0.5",
     "@vue/test-utils": "1.0.0-beta.29",
     "sass": "^1.18.0",
-    "sass-loader": "^7.1.0",
-    "ts-jest": "^23.0.0",
+    "sass-loader": "^8.0.0",
+    "ts-jest": "^24.1.0",
     "typescript": "^3.4.3",
     "vue-template-compiler": "^2.6.10"
   }
